# order-book-engine

./: .gitignore  CMakeLists.txt  README.md  perf.data  perf.data.old  perf_report_hotspots.txt  perf_report_stat.txt
data/: sample_ticks.csv
include/: benchmark.h  market_data_parser.h  memory_pool.h  order.h  order_book.h
scripts/: run_perf.sh
src/: benchmark.cpp  main.cpp  market_data_parser.cpp  memory_pool.cpp  order_book.cpp
tests/: test_memory_pool.cpp  test_order_book.cpp  test_parser.cpp
